RESOLVED FIXED299943
[Streams] ReadableStreamBYOBRequest build broken
https://bugs.webkit.org/show_bug.cgi?id=299943
Summary [Streams] ReadableStreamBYOBRequest build broken
Philippe Normand
Reported 2025-10-01 01:41:54 PDT
/var/home/phil/WebKit/Source/WebCore/Modules/streams/ReadableStreamBYOBRequest.cpp:88:51: error: member access into incomplete type 'ReadableStream' 88 | [[clang::suppress]] m_controller->stream().visitAdditionalChildren(visitor); | ^ /var/home/phil/WebKit/Source/WebCore/Modules/streams/ReadableByteStreamController.h:46:7: note: forward declaration of 'WebCore::ReadableStream' 46 | class ReadableStream; | ^ 1 error generated.
Attachments
Philippe Normand
Comment 1 2025-10-01 01:43:57 PDT
EWS
Comment 2 2025-10-01 01:46:17 PDT
Committed 300815@main (d7531f87eb40): <https://commits.webkit.org/300815@main> Reviewed commits have been landed. Closing PR #51616 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2025-10-01 01:47:13 PDT
Alexey Proskuryakov
Comment 4 2025-10-01 09:38:26 PDT
*** Bug 299942 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.