[Streams] ReadableStreamBYOBRequest build broken https://bugs.webkit.org/show_bug.cgi?id=299943

Unreviewed build fix.

Canonical link: https://commits.webkit.org/300815@main